<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.fragments.OrganizerEventDetailsFragment">


    <!-- Content -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp" >

            <ImageView
                android:id="@+id/eventposter"
                android:layout_width="158dp"
                android:layout_height="202dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:contentDescription="No Event Poster Uploaded"
                android:src="@drawable/ic_emptyimageplaceholder"/>

            <LinearLayout
                android:id="@+id/eventInfoColumn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

            <!-- Description -->
            <TextView
                android:id="@+id/labelStartTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_starttime_title"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/valueStartTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="12dp"
                android:text="Placeholder"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/labelLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_location_title"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/valueLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="12dp"
                android:text="Placeholder description from Firestore."
                android:textSize="14sp" />

            <TextView
                android:id="@+id/labelDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_description_title"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/valueDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="12dp"
                android:text="Placeholder description from Firestore."
                android:textSize="14sp" />

            <!-- Registration period -->
            <TextView
                android:id="@+id/labelRegistration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_reg_title"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/valueRegistration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="12dp"
                android:text="date – date, placeholder"
                android:textSize="14sp" />

            <!-- Waitlist count -->
            <TextView
                android:id="@+id/labelWaitlistCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_waitnum_title"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/valueWaitlistCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="xx placeholder for firestore"
                android:textSize="14sp" />

            </LinearLayout>
            <!-- comments -->
            <include
                layout="@layout/comments">
            </include>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/buttonRow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/backbutton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:backgroundTint="@color/nav_blue"
            android:text="@string/backbutton" />

        <Space
            android:layout_width="8dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/editEventButton"
            android:backgroundTint="@color/nav_blue"
            android:text="Edit Event"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventposter"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>